--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
     <div id="mainView" class="main-view">
         <header>
             <img src="launchpad-logo.png" alt="Launch Pad R1 Logo">
-            <button id="themeBtn" title="Change Theme">Theme Me!</button>
+            <button id="themeBtn" title="Change Theme">Theme!</button>
         </header>
         <div class="search-section">
             <input type="text" id="searchInput" placeholder="Search or Add...">
